# EduConnect-transcript

./: .dockerignore  .env.example  Dockerfile  README.md  app-v1.py  app-v2.py  index_transcript.txt  main.py  pyproject.toml  requirements.txt  worker.py
app/: __init__.py  routes.py
app/services/: storage_service.py
app/utils/: mongodb.py  s3.py  sqs.py
outputs/: 1761330445_test_transcript.txt  1761333068_test_transcript.txt  1763084955_index_transcript.txt
templates/: index.html
tests/: test_media_service.py
